# plugin-ida

./: .gitignore  README.md  ida-plugin.json  pyproject.toml  reai_toolkit_entry.py  reveng.py
.github/scripts/: bump_revengai.py
.github/workflows/: bump-revengai-sdk.yaml  features-drift.yml  publish.yaml  release.yaml  tests.yaml
.revengai/: features.json
docs/: FEATURE_STANDARD.md  development.md
reai_toolkit/app/: app.py  coordinator.py  factory.py
reai_toolkit/app/components/dialogs/: __init__.py  about_dialog.py  alert_dialog.py  analyse_dialog.py  auth_dialog.py  auto_unstrip_dialog.py  base_dialog.py  error_dialog.py  existing_analysis_dialog.py  import_functions_dialog.py  matching_dialog.py  select_functions_dialog.py
reai_toolkit/app/components/forms/about/: about_panel_qt5.ui  about_panel_ui_uic5.py  about_panel_ui_uic6.py
reai_toolkit/app/components/forms/alert/: alert_panel_qt5.ui  (+2 more)
reai_toolkit/app/components/tabs/: ai_decomp_tab.py  chat_render.py  chat_tab.py  similarity_tab.py
reai_toolkit/app/coordinators/: about_coordinator.py  ai_decomp_coordinator.py  ai_decomp_render.py  auth_coordinator.py  auto_unstrip_coordinator.py  base_coordinator.py  chat_coordinator.py  create_analysis_coordinator.py  detach_coordinator.py  existing_analysis_coordinator.py  matching_coordinator.py  poll_status_coordinator.py  similarity_coordinator.py  sync_analysis_coordinator.py
reai_toolkit/app/core/: __init__.py  config_service.py  logging_setup.py  netstore_service.py  qt_compat.py  shared_schema.py  utils.py
reai_toolkit/app/interfaces/: base_service.py  thread_service.py
reai_toolkit/app/services/ai_decomp/: ai_decomp_service.py
reai_toolkit/app/services/analysis_status/: analysis_status.py
reai_toolkit/app/services/analysis_sync/: analysis_sync.py  schema.py
reai_toolkit/app/services/auth/: auth_service.py
reai_toolkit/app/services/auto_unstrip/: auto_unstrip_service.py
reai_toolkit/app/services/auto_unstrip_status/: auto_unstrip_status.py
reai_toolkit/app/services/chat/: __init__.py  chat_service.py  reducer.py  schema.py  sse.py
reai_toolkit/app/services/data_types/: data_types_service.py  schema.py
reai_toolkit/app/services/existing_analyses/: existing_analyses_service.py
reai_toolkit/app/services/matching/: matching_service.py  schema.py  similarity_service.py
reai_toolkit/app/services/rename/: rename_service.py  schema.py
reai_toolkit/app/services/upload/: upload_service.py
reai_toolkit/app/services/variable_sync/: variable_sync_service.py
reai_toolkit/app/transformations/: import_data_types.py
reai_toolkit/hooks/: artifacts.py  globals.py  menu.py  popup.py  reactive.py
revengai/: actions.py  ai_decompilation_view.py  ida_ui.py
revengai/features/: __init__.py  auto_analyze.py  auto_unstrip.py  function_similarity.py
revengai/misc/: datatypes.py
revengai/rpc/: hmac.py  models.py  serve.py  state.py
scripts/: emit_features.py
tests/: README.md  conftest.py
tests/fixtures/: hello.elf
tests/idalib/: conftest.py
tests/idalib/ai_decomp/: test_smoke.py
tests/idalib/analysis_sync/: test_sync.py
tests/idalib/core/: test_base_service.py  test_netstore.py  test_utils.py
tests/idalib/data_types/: test_import.py
tests/idalib/matching/: test_matching.py
tests/idalib/variable_sync/: test_read.py
tests/ui/: ai_decomp_ui_runner.py  ida_ui_runner.py  test_gui_ai_decomp.py  test_gui_sync.py
tests/unit/ai_decomp/: test_render.py  test_sdk_schemas.py  test_service.py
tests/unit/analysis_status/: test_sdk_schemas.py  test_service.py
tests/unit/analysis_sync/: test_sdk_schemas.py  test_service.py
tests/unit/auth/: test_sdk_schemas.py  test_service.py
tests/unit/auto_unstrip/: test_sdk_schemas.py  test_service.py
tests/unit/auto_unstrip_status/: test_sdk_schemas.py  test_service.py
tests/unit/chat/: test_reducer.py  test_render.py  test_sdk_schemas.py  test_service.py  test_sse_parser.py
tests/unit/core/: test_base_service.py  test_config_service.py  test_logging_setup.py  test_utils.py
tests/unit/data_types/: test_import_transform.py  test_sdk_schemas.py  test_service.py
tests/unit/existing_analyses/: test_sdk_schemas.py  test_service.py
tests/unit/matching/: test_matching_service.py  test_sdk_schemas.py  test_similarity_service.py
tests/unit/rename/: test_sdk_schemas.py  test_service.py
tests/unit/upload/: test_service.py
tests/unit/variable_sync/: test_service.py
(+21 files in other folders)
