[project]
name = "reai_toolkit"
version = "0.0.1"
description = "RevEng.AI Toolkit plugin for IDA"
requires-python = ">=3.10"

# Runtime deps only — IDA ships idaapi/Qt; don't add them here.
dependencies = [
  "requests>=2.32",
  "loguru>=0.7",
  "pydantic",
  "revengai>=3.110.0",
  "libbs>=2.16.5",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reai_toolkit*"]
exclude = ["screenshots*", "tests*", "docker*", "stubs*"]

# -------------------------------
# Astral uv configuration
# -------------------------------
[tool.uv]
[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-mock>=3.14",
  "types-requests",
  "pyqt5-stubs",
  "idapro>=0.0.5",
  "pyqt5",
  "pyqt6-stubs",
  "pyqt6",
  "PySide6",
  "debugpy>=1.8.17",
  "ruff>=0.14.13",
]

# If you *do* want to install a stub package for IDA later, you can use a sources entry:
# [tool.uv.sources]
# idapython-stubs = { git = "https://example.com/your-idapython-stubs.git", rev = "main" }
# and then add "idapython-stubs" to the dev-dependencies list above.

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

# Point mypy to a local stubs folder (no install needed).
# Put your IDA API .pyi files under ./stubs/ida/
mypy_path = ["stubs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib -s"
markers = [
    "idalib: tests that require an activated idalib (IDA Pro headless). Run with `pytest -m idalib`. In CI these run on the `ida` self-hosted runner image (IDA + idalib preinstalled, licensing provided by the runner environment).",
]
